--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-ravpn (0.12.44+helium0+focal0+rev20200425162305) unstable; urgency=low
+
+  * New branch.
+
+ -- Masakazu Asama <m-asama@ginzado.co.jp>  Fri,  7 Feb 2020 20:59:26 +0900
+
 vyatta-ravpn (0.12.44+vyos1+helium7) unstable; urgency=low
 
   [ Alex Harpin ]
